--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,10 @@ buildscript {
     }
 }
 
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
+
 repositories {
     mavenCentral()
 }
